--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^4.11.12",
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react": "^16.0.0"
   }
 }
