--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "webpack": "^3.6.0"
   }
 }
