--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.0.0",
-    "webpack": "^3.6.0"
+    "react-dom": "^16.0.0",
   }
 }
